testing/network_policies/istio-bookinfo/cilium-allow-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-allow-all
  namespace: bookinfo-services-ns
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
