testing/network_policies/istio-bookinfo/cilium-ipblock-egress-port-range.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-ipblock-egress-port-range
  namespace: bookinfo-services-ns
spec:
  endpointSelector:
    matchLabels:
      app: reviews
  egress:
  - toCIDR:
    - 10.0.0.0/24
    toPorts:
    - ports:
      - port: "440"
        endPort: 450
        protocol: TCP
