testing/network_policies/istio-bookinfo/cilium-ipblock-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-ipblock-egress
  namespace: bookinfo-services-ns
spec:
  endpointSelector:
    matchLabels:
      app: reviews
  egress:
  - toCIDR:
    - 10.0.0.0/24
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
