testing/network_policies/istio-bookinfo/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: bookinfo-services-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
