testing/network_policies/istio-bookinfo/namespace-selector-egress-label-mismatch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-egress-label-mismatch
  namespace: bookinfo-services-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: wrong-bookinfo-data-ns
