testing/network_policies/istio-bookinfo/namespace-selector-egress-with-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-egress-with-ports
  namespace: bookinfo-services-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookinfo-data-ns
    ports:
    - protocol: TCP
      port: 9080
