testing/network_policies/istio-bookinfo/namespace-selector-ingress-with-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-ingress-with-ports
  namespace: bookinfo-services-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookinfo-frontend-ns
    ports:
    - protocol: TCP
      port: 9080
