testing/network_policies/istio-bookinfo/pod-namespace-selector-combined.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-namespace-selector-combined
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookinfo-frontend-ns
      podSelector:
        matchLabels:
          app: productpage
    ports:
    - protocol: TCP
      port: 9080
