testing/network_policies/istio-bookinfo/pod-selector-egress-with-port-range.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-with-port-range
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: details
    ports:
    - protocol: TCP
      port: 9080
      endPort: 9090
